gawk -i inplace "{ gsub(/EntityNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
@@ -1,4 +1,4 @@
-@page "/admin/UrlNamePlaceholder/view/{EntityNamePlaceholderId:guid}"
+@page "/admin/UrlNamePlaceholder/view/{GameId:guid}"
 @rendermode InteractiveServer
 @inject IDbContextFactory<ApplicationDbContext> DbFactory
 @inject IPageHelper PageHelper
@@ -12,13 +12,13 @@
 }
 else
 {
-    @if (EntityNamePlaceholder is null || Loading)
+    @if (Game is null || Loading)
     {
         <div class="alert alert-info">Loading...</div>
     }
     else
     {
-        <h1>@EntityNamePlaceholder.Name</h1>
+        <h1>@Game.Name</h1>
         <br />
         @if (EditSuccess)
         {
@@ -31,7 +31,7 @@ else
         <span>&nbsp;</span>
         @if (!Deleted)
         {
-            <a class="btn btn-primary" href="admin/UrlNamePlaceholder/edit/@EntityNamePlaceholder.Id" title="Edit">Edit</a>
+            <a class="btn btn-primary" href="admin/UrlNamePlaceholder/edit/@Game.Id" title="Edit">Edit</a>
 
             <span>&nbsp;</span>
             @if (!ShowConfirmation)
@@ -58,17 +58,17 @@ else
 
     // Id from route of contact.
     [Parameter]
-    public Guid EntityNamePlaceholderId { get; set; }
+    public Guid GameId { get; set; }
 
     // Navigation check.
-    private Guid _lastEntityNamePlaceholderId;
+    private Guid _lastGameId;
 
     // True with redirect from successful edit.
     [Parameter]
     public bool EditSuccess { get; set; }
 
-    // EntityNamePlaceholder entity.
-    private EntityNamePlaceholder? EntityNamePlaceholder { get; set; }
+    // Game entity.
+    private Game? Game { get; set; }
 
     // Set to true when not found.
     private bool NotFound = false;
@@ -82,12 +82,12 @@ else
     // Navigated
     protected override async Task OnParametersSetAsync()
     {
-        if (_lastEntityNamePlaceholderId != EntityNamePlaceholderId)
+        if (_lastGameId != GameId)
         {
             EditSuccess = EditSuccessState.Success;
             EditSuccessState.Success = false;
-            _lastEntityNamePlaceholderId = EntityNamePlaceholderId;
-            await LoadEntityNamePlaceholderAsync();
+            _lastGameId = GameId;
+            await LoadGameAsync();
         }
     }
 
@@ -107,7 +107,7 @@ else
     }
 
     // Loads the contact.
-    private async Task LoadEntityNamePlaceholderAsync()
+    private async Task LoadGameAsync()
     {
         if (Loading)
         {
@@ -115,7 +115,7 @@ else
         }
 
         NotFound = false;
-        EntityNamePlaceholder = null;
+        Game = null;
 
         Loading = true;
 
@@ -123,12 +123,12 @@ else
 
         if (context.TableNamePlaceholder is not null)
         {
-            EntityNamePlaceholder = await context.TableNamePlaceholder
+            Game = await context.TableNamePlaceholder
                 .AsNoTracking()
                 .SingleOrDefaultAsync(
-                    c => c.Id == EntityNamePlaceholderId);
+                    c => c.Id == GameId);
 
-            if (EntityNamePlaceholder is null)
+            if (Game is null)
             {
                 NotFound = true;
             }
@@ -152,7 +152,7 @@ else
         if (context?.Roles is not null)
         {
             var contact = await context.TableNamePlaceholder
-                .SingleOrDefaultAsync(c => c.Id == EntityNamePlaceholderId);
+                .SingleOrDefaultAsync(c => c.Id == GameId);
 
             if (contact is not null)
             {
@@ -165,14 +165,14 @@ else
             {
                 Loading = false;
                 // Show not found.
-                await LoadEntityNamePlaceholderAsync();
+                await LoadGameAsync();
             }
         }
         else
         {
             Loading = false;
             // Show not found.
-            await LoadEntityNamePlaceholderAsync();
+            await LoadGameAsync();
         }
     }
 }
