gawk -i inplace "{ gsub(/@\* NavMenuLinkCodePlaceholder \*@/, \"<li class=\\\"nav-item\\\">\n\ \ \ \ \ \ \ \ <NavLink class=\\\"nav-link\\\" data-testid=\\\"gameNavLink\\\" href=\\\"admin/game\\\">\n\ \ \ \ \ \ \ \ \ \ Games\n\ \ \ \ \ \ \ \ </NavLink>\n </li>\n\n\ \ \ \ \ \ @\* NavMenuLinkCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8.Client/Layout/SideBar.razor

--- a/BlazorCrudDotNet8.Client/Layout/SideBar.razor
+++ b/BlazorCrudDotNet8.Client/Layout/SideBar.razor
@@ -19,7 +19,13 @@
     </NavLink>
   </li>
 
-  @* NavMenuLinkCodePlaceholder *@
+  <li class="nav-item">
+        <NavLink class="nav-link" data-testid="gameNavLink" href="admin/game">
+          Games
+        </NavLink>
+ </li>
+
+      @* NavMenuLinkCodePlaceholder *@
 
 </ul>
 
