gawk -i inplace "{ gsub(/ApplicationNamePlaceholder/, \"BlazorCrudDotNet8\") }; { print }" BlazorCrudDotNet8/Components/Admin/*

--- a/BlazorCrudDotNet8/Components/Admin/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/Admin/_Imports.razor
@@ -1,7 +1,7 @@
-﻿@using ApplicationNamePlaceholder.BusinessLogic
-@using ApplicationNamePlaceholder.BusinessLogic.Data
-@using ApplicationNamePlaceholder.BusinessLogic.Entities
-@using ApplicationNamePlaceholder.BusinessLogic.Grid
-@using ApplicationNamePlaceholder.Components
+﻿@using BlazorCrudDotNet8.BusinessLogic
+@using BlazorCrudDotNet8.BusinessLogic.Data
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Grid
+@using BlazorCrudDotNet8.Components
 
 @attribute [Authorize(Roles = "Admin")]
