--- a/BlazorCrudDotNet8/Components/Admin/ApplicationRoleComponents/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/Admin/ApplicationRoleComponents/_Imports.razor
@@ -1,1 +1,1 @@
-@using ApplicationNamePlaceholder.BusinessLogic.Grid.Admin.ApplicationRoleGrid
+@using BlazorCrudDotNet8.BusinessLogic.Grid.Admin.ApplicationRoleGrid
