gawk -i inplace "{ gsub(/ApplicationNamePlaceholder/, \"BlazorCrudDotNet8\") }; { print }" BlazorCrudDotNet8/Components/Admin/ApplicationUserComponents/*

--- a/BlazorCrudDotNet8/Components/Admin/ApplicationUserComponents/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/Admin/ApplicationUserComponents/_Imports.razor
@@ -1,1 +1,1 @@
-@using ApplicationNamePlaceholder.BusinessLogic.Grid.Admin.ApplicationUserGrid
+@using BlazorCrudDotNet8.BusinessLogic.Grid.Admin.ApplicationUserGrid
