gawk -i inplace "{ gsub(/@\* PropertyFormCodePlaceholder \*@/, \"<h2>Name</h2>\n\ \ \ \ \ \ \ \ <p>\n\ \ \ \ \ \ \ \ \ \ \ \ <label>\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ Name:\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ <InputText @bind-Value=\\\"Game.Name\\\" @oninput=\\\"HandleNameChange\\\"/>\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ <ConcurrencyField Model=\\\"Game\\\" DbModel=\\\"DbGame\\\" Property=\\\"obj => obj?.Name\\\" />\n\ \ \ \ \ \ \ \ \ \ \ \ </label>\n\ \ \ \ \ \ \ \ </p>\n\ \ \ \ \ \ \ \ @\* PropertyFormCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -9,6 +9,14 @@
         <DataAnnotationsValidator />
         <ValidationSummary />
 
+        <h2>Name</h2>
+        <p>
+            <label>
+                Name:
+                <InputText @bind-Value="Game.Name" @oninput="HandleNameChange"/>
+                <ConcurrencyField Model="Game" DbModel="DbGame" Property="obj => obj?.Name" />
+            </label>
+        </p>
         @* PropertyFormCodePlaceholder *@
         @* <h2>Name</h2>
         <p>
