gawk -i inplace "{ gsub(/\/\/ HandleChangeCodePlaceholder/, \"private void HandleNameChange(ChangeEventArgs changeEventArgs)\n\ \ \ \ {\n\ \ \ \ \ \ \ \ // NormalizedCodeNamePlaceholder\n\ \ \ \ }\n\n\ \ \ \ // HandleChangeCodePlaceholder\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -72,6 +72,11 @@
     // isValid: True when field validation passed.
     private async Task HandleSubmitAsync(bool isValid) => await ValidationResult.InvokeAsync(isValid);
 
+    private void HandleNameChange(ChangeEventArgs changeEventArgs)
+    {
+        // NormalizedCodeNamePlaceholder
+    }
+
     // HandleChangeCodePlaceholder
 
     @* private void HandleNameChange(ChangeEventArgs changeEventArgs)
