gawk -i inplace "{ gsub(/@\* SortIndicatorCodePlaceholder \*@/, \"<div class=\\\"col-3\\\" @onclick=\\\"@(async ()=>await ToggleAsync(GameFilterColumns.Name))\\\">\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ <SortIndicator Column=\\\"@(GameFilterColumns.Name)\\\" />\\\\&nbsp;Name\n\ \ \ \ \ \ \ \ \ \ \ \ </div>\n\n\ \ \ \ \ \ \ \ \ \ \ \ @\* SortIndicatorCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor
@@ -40,6 +40,10 @@
         <div class="row contact-header">
             <div class="col-2">&nbsp;</div>
 
+            <div class="col-3" @onclick="@(async ()=>await ToggleAsync(GameFilterColumns.Name))">
+                <SortIndicator Column="@(GameFilterColumns.Name)" />&nbsp;Name
+            </div>
+
             @* SortIndicatorCodePlaceholder *@
             @* <div class="col-3" @onclick="@(async ()=>await ToggleAsync(GameFilterColumns.Name))">
                 <SortIndicator Column="@(GameFilterColumns.Name)" />&nbsp;Name
