gawk -i inplace "{ gsub(/\/\/ NormalizedCodeNamePlaceholder/, \"if (changeEventArgs != null \\\\&\\\\& changeEventArgs.Value != null)\n\ \ \ \ \ \ \ \ {\n\ \ \ \ \ \ \ \ \ \ \ \ Game.NormalizedName = ((string)changeEventArgs.Value).ToUpperInvariant();\n\ \ \ \ \ \ \ \ }\n\ \ \ \ \ \ \ \ else\n\ \ \ \ \ \ \ \ {\n\ \ \ \ \ \ \ \ \ \ \ \ Game.NormalizedName = \\\"\\\";\n\ \ \ \ \ \ \ \ }\n\n\ \ \ \ \ \ \ \ // NormalizedCodeNamePlaceholder\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -74,6 +74,15 @@
 
     private void HandleNameChange(ChangeEventArgs changeEventArgs)
     {
+        if (changeEventArgs != null && changeEventArgs.Value != null)
+        {
+            Game.NormalizedName = ((string)changeEventArgs.Value).ToUpperInvariant();
+        }
+        else
+        {
+            Game.NormalizedName = "";
+        }
+
         // NormalizedCodeNamePlaceholder
     }
 
