--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
@@ -4,11 +4,11 @@
 @inject IPageHelper PageHelper
 @inject EditSuccess EditSuccessState
 
-<PageTitle>HumanNamePlaceholder View</PageTitle>
+<PageTitle>Game View</PageTitle>
 
 @if (NotFound && !Loading)
 {
-    <div class="alert alert-warning">HumanNamePlaceholder with that id doesn't exist.</div>
+    <div class="alert alert-warning">Game with that id doesn't exist.</div>
 }
 else
 {
@@ -23,7 +23,7 @@ else
         <br />
         @if (EditSuccess)
         {
-            <div class="alert alert-success">Successfully updated the HumanNamePlaceholder.</div>
+            <div class="alert alert-success">Successfully updated the Game.</div>
         }
         <hr />
         <h2>Id</h2>
@@ -55,7 +55,7 @@ else
         }
         else
         {
-            <div class="btn btn-danger">🚫 This HumanNamePlaceholder has been deleted.</div>
+            <div class="btn btn-danger">🚫 This Game has been deleted.</div>
         }
     }
 }
