gawk -i inplace "{ gsub(/@\* PropertyCodePlaceholder \*@/, \"<h2>Name</h2>\n\ \ \ \ \ \ \ \ <br />\n\ \ \ \ \ \ \ \ <h3>@Game.Name</h3>\n\ \ \ \ \ \ \ \ <br />\n\ \ \ \ \ \ \ \ @\* PropertyCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
@@ -32,6 +32,10 @@ else
         <h3>@Game.Id</h3>
         <br />
 
+        <h2>Name</h2>
+        <br />
+        <h3>@Game.Name</h3>
+        <br />
         @* PropertyCodePlaceholder *@
 
         <a class="btn btn-primary" title="Go Back" href="admin/game/@PageHelper.Page">
