--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -64,6 +64,23 @@
 
     private void HandleNameChange(ChangeEventArgs changeEventArgs)
     {
+        if (Game == null)
+        {
+            return;
+        }
+
+        if (changeEventArgs == null)
+        {
+            return;
+        }
+
+        if (changeEventArgs.Value == null)
+        {
+            return;
+        }
+
+        Game.NormalizedName = ((string)changeEventArgs.Value).ToUpperInvariant();
+
         // NormalizedCodeNamePlaceholder
     }
 
