--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -62,5 +62,10 @@
     // isValid: True when field validation passed.
     private async Task HandleSubmitAsync(bool isValid) => await ValidationResult.InvokeAsync(isValid);
 
+    private void HandleNameChange(ChangeEventArgs changeEventArgs)
+    {
+        // NormalizedCodeNamePlaceholder
+    }
+
     // HandleChangeCodePlaceholder
 }
