gawk -i inplace "{ gsub(/@\* SortIndicatorCodePlaceholder \*@/, \"<div class=\\\"col-3\\\" @onclick=\\\"@(async ()=>await ToggleAsync(GameFilterColumns.Name))\\\">\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ <SortIndicator Column=\\\"@(GameFilterColumns.Name)\\\" />\\\\&nbsp;Name\n\ \ \ \ \ \ \ \ \ \ \ \ </div>\n\n\ \ \ \ \ \ \ \ \ \ \ \ @\* SortIndicatorCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Home.razor
@@ -44,6 +44,10 @@
                 <SortIndicator Column="@(GameFilterColumns.Id)" />&nbsp;Id
             </div>
 
+            <div class="col-3" @onclick="@(async ()=>await ToggleAsync(GameFilterColumns.Name))">
+                <SortIndicator Column="@(GameFilterColumns.Name)" />&nbsp;Name
+            </div>
+
             @* SortIndicatorCodePlaceholder *@
 
         </div>
