--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
@@ -1,4 +1,4 @@
-@page "/admin/UrlNamePlaceholder/edit/{EntityNamePlaceholderId:guid}"
+@page "/admin/UrlNamePlaceholder/edit/{GameId:guid}"
 @rendermode InteractiveServer
 @implements IDisposable
 @inject IDbContextFactory<ApplicationDbContext> DbFactory
@@ -8,15 +8,15 @@
 
 <PageTitle>HumanNamePlaceholder Edit</PageTitle>
 
-@if (EntityNamePlaceholder is null && !Busy)
+@if (Game is null && !Busy)
 {
-    <p>Could not find HumanNamePlaceholder with id @EntityNamePlaceholderId.</p>
+    <p>Could not find HumanNamePlaceholder with id @GameId.</p>
 }
 else
 {
-    <EntityNamePlaceholderForm Busy="Busy" 
-                 EntityNamePlaceholder="EntityNamePlaceholder" 
-                 DbEntityNamePlaceholder="DbEntityNamePlaceholder" 
+    <GameForm Busy="Busy" 
+                 Game="Game" 
+                 DbGame="DbGame" 
                  IsAdd="false" 
                  CancelRequest="Cancel" 
                  ValidationResult="@(async (success) => await ValidationResultAsync(success))" />
@@ -46,7 +46,7 @@ else
     /// Id of HumanNamePlaceholder to edit
     /// </summary>
     [Parameter]
-    public Guid EntityNamePlaceholderId { get; set; }
+    public Guid GameId { get; set; }
 
     /// <summary>
     /// The <see cref="ApplicationDbContext"/> for database access.
@@ -54,14 +54,14 @@ else
     private ApplicationDbContext? Context { get; set; }
 
     /// <summary>
-    /// EntityNamePlaceholder being edited
+    /// Game being edited
     /// </summary>
-    private EntityNamePlaceholder EntityNamePlaceholder { get; set; } = new EntityNamePlaceholder();
+    private Game Game { get; set; } = new Game();
 
     /// <summary>
     /// Database version when concurrency issues exist
     /// </summary>
-    private EntityNamePlaceholder DbEntityNamePlaceholder { get; set; } = new EntityNamePlaceholder();
+    private Game DbGame { get; set; } = new Game();
 
     /// <summary>
     /// Avoid concurrent requests
@@ -98,11 +98,11 @@ else
 
             if (Context is not null && Context.TableNamePlaceholder is not null)
             {
-                var LowercaseNamePlaceholder = await Context.TableNamePlaceholder.SingleOrDefaultAsync(c => c.Id == EntityNamePlaceholderId);
+                var LowercaseNamePlaceholder = await Context.TableNamePlaceholder.SingleOrDefaultAsync(c => c.Id == GameId);
 
                 if (LowercaseNamePlaceholder is not null)
                 {
-                    EntityNamePlaceholder = LowercaseNamePlaceholder;
+                    Game = LowercaseNamePlaceholder;
                 }
             }
         }
@@ -143,7 +143,7 @@ else
 
             EditSuccessState.Success = true;
             // go to view to see the record
-            Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{EntityNamePlaceholder.Id}");
+            Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
         }
         catch (DbUpdateConcurrencyException dbex)
         {
@@ -158,12 +158,12 @@ else
             if (dbValues is null)
             {
                 // deleted - show HumanNamePlaceholder not found
-                Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{EntityNamePlaceholder.Id}");
+                Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
                 return;
             }
 
             // bind to show labels on form
-            DbEntityNamePlaceholder = (EntityNamePlaceholder)dbValues.ToObject();
+            DbGame = (Game)dbValues.ToObject();
 
             // move to original so second submit works (unless there is another concurrent edit)
             dbex.Entries[0].OriginalValues.SetValues(dbValues);
