--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
@@ -96,9 +96,9 @@ else
         {
             Context = DbFactory.CreateDbContext();
 
-            if (Context is not null && Context.TableNamePlaceholder is not null)
+            if (Context is not null && Context.Games is not null)
             {
-                var LowercaseNamePlaceholder = await Context.TableNamePlaceholder.SingleOrDefaultAsync(c => c.Id == GameId);
+                var LowercaseNamePlaceholder = await Context.Games.SingleOrDefaultAsync(c => c.Id == GameId);
 
                 if (LowercaseNamePlaceholder is not null)
                 {
