--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Edit.razor
@@ -1,4 +1,4 @@
-@page "/admin/UrlNamePlaceholder/edit/{GameId:guid}"
+@page "/admin/game/edit/{GameId:guid}"
 @rendermode InteractiveServer
 @implements IDisposable
 @inject IDbContextFactory<ApplicationDbContext> DbFactory
@@ -143,7 +143,7 @@ else
 
             EditSuccessState.Success = true;
             // go to view to see the record
-            Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
+            Navigation.NavigateTo($"/admin/game/view/{Game.Id}");
         }
         catch (DbUpdateConcurrencyException dbex)
         {
@@ -158,7 +158,7 @@ else
             if (dbValues is null)
             {
                 // deleted - show Game not found
-                Navigation.NavigateTo($"/admin/UrlNamePlaceholder/view/{Game.Id}");
+                Navigation.NavigateTo($"/admin/game/view/{Game.Id}");
                 return;
             }
 
@@ -186,7 +186,7 @@ else
     private void Cancel()
     {
         Busy = true;
-        Navigation.NavigateTo($"/admin/UrlNamePlaceholder/{PageHelper.Page}");
+        Navigation.NavigateTo($"/admin/game/{PageHelper.Page}");
     }
 
     /// <summary>
