gawk -i inplace "{ gsub(/HumanNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/GameRow.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameRow.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameRow.razor
@@ -57,7 +57,7 @@
         }
     }
 
-    // Event to raise when a HumanNamePlaceholder delete is requested.
+    // Event to raise when a Game delete is requested.
     [Parameter]
     public EventCallback DeleteGame { get; set; }
 
