gawk -i inplace "{ gsub(/LowercaseNamePlaceholder/, \"game\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/View.razor
@@ -159,12 +159,12 @@ else
 
         if (context?.Roles is not null)
         {
-            var LowercaseNamePlaceholder = await context.TableNamePlaceholder
+            var game = await context.TableNamePlaceholder
                 .SingleOrDefaultAsync(x => x.Id == GameId);
 
-            if (LowercaseNamePlaceholder is not null)
+            if (game is not null)
             {
-                context.TableNamePlaceholder?.Remove(LowercaseNamePlaceholder);
+                context.TableNamePlaceholder?.Remove(game);
                 await context.SaveChangesAsync();
                 Loading = false;
                 Deleted = true;
