gawk -i inplace "{ gsub(/TableNamePlaceholder/, \"Games\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Add.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Add.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/Pages/Add.razor
@@ -63,7 +63,7 @@
 
         if (Game is not null)
         {
-            context.TableNamePlaceholder?.Add(Game);
+            context.Games?.Add(Game);
         }
 
         try
