--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -51,5 +51,10 @@
 
     private async Task HandleSubmitAsync(bool isValid) => await ValidationResult.InvokeAsync(isValid);
 
+    private void HandleNameChange(ChangeEventArgs changeEventArgs)
+    {
+        // NormalizedCodeNamePlaceholder
+    }
+
     // HandleChangeCodePlaceholder
 }
