gawk -i inplace "{ gsub(/\/\/ NormalizedCodeNamePlaceholder/, \"if (Game == null)\n\ \ \ \ \ \ \ \ {\n\ \ \ \ \ \ \ \ \ \ \ \ return;\n\ \ \ \ \ \ \ \ }\n\n\ \ \ \ \ \ \ \ if (changeEventArgs == null)\n\ \ \ \ \ \ \ \ {\n\ \ \ \ \ \ \ \ \ \ \ \ return;\n\ \ \ \ \ \ \ \ }\n\n\ \ \ \ \ \ \ \ if (changeEventArgs.Value == null)\n\ \ \ \ \ \ \ \ {\n\ \ \ \ \ \ \ \ \ \ \ \ return;\n\ \ \ \ \ \ \ \ }\n\n\ \ \ \ \ \ \ \ Game.NormalizedName = ((string)changeEventArgs.Value).ToUpperInvariant();\n\n\ \ \ \ \ \ \ \ // NormalizedCodeNamePlaceholder\") }; { print }" BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor

--- a/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
+++ b/BlazorCrudDotNet8/Components/Admin/GameComponents/GameForm.razor
@@ -53,6 +53,23 @@
 
     private void HandleNameChange(ChangeEventArgs changeEventArgs)
     {
+        if (Game == null)
+        {
+            return;
+        }
+
+        if (changeEventArgs == null)
+        {
+            return;
+        }
+
+        if (changeEventArgs.Value == null)
+        {
+            return;
+        }
+
+        Game.NormalizedName = ((string)changeEventArgs.Value).ToUpperInvariant();
+
         // NormalizedCodeNamePlaceholder
     }
 
